Ooops - one more update to Home_Sales_Spark_code_colab.ipynb

--- a/Home_Sales_Spark_code_colab.ipynb
+++ b/Home_Sales_Spark_code_colab.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu focal InRelease\n",
             "\r0% [Connecting to security.ubuntu.com] [Connected to cloud.r-project.org (108.1\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
@@ -97,8 +97,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
             "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
@@ -162,8 +162,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
             "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
@@ -201,8 +201,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+----------+-------------+\n",
             "|date_built|Average_Price|\n",
@@ -279,7 +279,7 @@
       },
       "outputs": [],
       "source": [
-        "# 6. What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
+        "# What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
         "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
         "\n",
         "start_time = time.time()\n",
@@ -304,7 +304,7 @@
       },
       "outputs": [],
       "source": [
-        "# 7. Cache the the temporary table home_sales.\n",
+        "# Cache the the temporary table home_sales.\n",
         "spark.sql(\"CACHE TABLE home_sales\")\n",
         "\n",
         "# Help from https://spark.apache.org/docs/latest/sql-ref-syntax-aux-cache-cache-table.html for this"
@@ -318,7 +318,7 @@
       },
       "outputs": [],
       "source": [
-        "# 8. Check if the table is cached.\n",
+        "# Check if the table is cached.\n",
         "spark.catalog.isCached('home_sales')"
       ]
     },
@@ -330,7 +330,7 @@
       },
       "outputs": [],
       "source": [
-        "# 9. Using the cached data, run the query that filters out the view ratings with average price\n",
+        "# Using the cached data, run the query that filters out the view ratings with average price\n",
         "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
         "\n",
         "start_time = time.time()\n",
@@ -367,7 +367,7 @@
       },
       "outputs": [],
       "source": [
-        "# 11. Read the parquet formatted data.\n",
+        "# Read the parquet formatted data.\n",
         "home_sales_parquet_df=spark.read.parquet('parquet_home_sales')"
       ]
     },
@@ -379,7 +379,7 @@
       },
       "outputs": [],
       "source": [
-        "# 12. Create a temporary table for the parquet data.\n",
+        "# Create a temporary table for the parquet data.\n",
         "home_sales_parquet_df.createOrReplaceTempView('parquet_home_sales_table')"
       ]
     },
@@ -391,7 +391,7 @@
       },
       "outputs": [],
       "source": [
-        "# 13. Run the query that filters out the view ratings with average price of greater than or equal to $350,000\n",
+        "# Run the query that filters out the view ratings with average price of greater than or equal to $350,000\n",
         "# with the parquet DataFrame. Round your average to two decimal places.\n",
         "# Determine the runtime and compare it to the cached version.\n",
         "\n",
